PERF-247: Changed parameter _retry to failed_refresh_retry.

--- a/templates/zone_file.erb
+++ b/templates/zone_file.erb
@@ -2,7 +2,7 @@ $TTL    <%= ttl %>
 @   IN  SOA <%= mname %>. <%= rname %>.<%= mname %>. (
     <%= serial %>; Serial
     <%= refresh %>; Refresh
-    <%= _retry %>; Retry
+    <%= failed_refresh_retry %>; Retry
     <%= expire %>; Expire
     <%= minimum %>; Minimum TTL
 );
