--- a/templates/named.conf.local_key_fragment.erb
+++ b/templates/named.conf.local_key_fragment.erb
@@ -1,6 +1,6 @@
 
 key "<%= key_name %>" {
-  algorithm "<%= key_algorithm %>"
-  secret "<%= key_secret %>"
+  algorithm "<%= key_algorithm %>";
+  secret "<%= key_secret %>";
 };
 
