adjusted to make multiple server sections in named.conf.local

--- a/templates/named.conf.local_servers_fragment.erb
+++ b/templates/named.conf.local_servers_fragment.erb
@@ -1,7 +1,10 @@
 
-server 'transfer-servers' {
-    keys {
-      TRANSFER;
-    };
+<% if @transfer_servers %>
+<%transfer_servers.each do |server| %><%= server %>;<% end %>
+server <% server %> {
+  keys {
+    TRANSFER;
+  };
 };
+<% end -%>
 
