--- a/templates/named.conf.local_servers_fragment.erb
+++ b/templates/named.conf.local_servers_fragment.erb
@@ -1,7 +1,7 @@
 
 <% if @transfer_servers %>
-<%transfer_servers.each do |server| %><%= server %>;<% end %>
-server <%= server %> {
+<%transfer_servers.each do |serverip| %><%= server %>;<% end %>
+server <%= serverip %> {
   keys {
     TRANSFER;
   };
