added mode for master/slave

--- a/templates/named.conf.local_zone_fragment.erb
+++ b/templates/named.conf.local_zone_fragment.erb
@@ -2,6 +2,6 @@
 // Zone fragment for <%= name %>
 
 zone "<%= name %>" IN {
-    type master;
+type <%= mode %>;
     file "/etc/bind/db.<%= name %>";
 };
