added slave lines to the zone fragments

--- a/templates/named.conf.local_zone_fragment.erb
+++ b/templates/named.conf.local_zone_fragment.erb
@@ -4,4 +4,8 @@
 zone "<%= name %>" IN {
     type <%= mode %>;
     file "/etc/bind/db.<%= name %>";
+    <% if mode == 'slave' -%>
+      master { transfer-servers; };
+      allow-transfer { transfer-servers; };
+    <% end -%>
 };
