added masters clause

--- a/templates/named.conf.local_acl_transfer_servers_fragment.erb
+++ b/templates/named.conf.local_acl_transfer_servers_fragment.erb
@@ -1,6 +1,10 @@
 
 <% if @transfer_servers %>
-acl 'transfer-servers' {
+acl "transfer-servers" {
+  <%transfer_servers.each do |server| %><%= server %>;<% end %>
+};
+
+masters "master-servers" {
   <%transfer_servers.each do |server| %><%= server %>;<% end %>
 };
 <% end -%>
