updated zone location due to write permissions on /etc/bind

--- a/templates/named.conf.local_zone_fragment.erb
+++ b/templates/named.conf.local_zone_fragment.erb
@@ -3,7 +3,7 @@
 
 zone "<%= name %>" IN {
     type <%= mode %>;
-    file "/etc/bind/db.<%= name %>";
+    file "/var/lib/bind/db.<%= name %>";
     <% if mode == 'slave' -%>
       masters { master-servers; };
       allow-transfer { transfer-servers; };
