--- a/templates/named.conf.options.erb
+++ b/templates/named.conf.options.erb
@@ -21,7 +21,7 @@ options {
     <% if allow_query != :undef -%>
     allow-query {
       <% allow_query.each do |range| %><%=  range %>;<% end %>
-    };
+      };<% end %>
 
     auth-nxdomain no;    # conform to RFC1035
     listen-on-v6 { any; };
