--- a/templates/named.conf.local_servers_fragment.erb
+++ b/templates/named.conf.local_servers_fragment.erb
@@ -1,11 +1,7 @@
 
-<% if @transfer_servers %>
-<% transfer_servers.each do |serverip| %>
-server <%= serverip %> {
+server <%= name %> {
   keys {
-    TRANSFER;
+  <%= key %>;
   };
 };
-<% end -%>
-<% end -%>
 
