added support to secify the masters for a slave zone

--- a/templates/named.conf.local_zone_fragment.erb
+++ b/templates/named.conf.local_zone_fragment.erb
@@ -5,7 +5,7 @@ zone "<%= name %>" IN {
     type <%= mode %>;
     file "/var/lib/bind/db.<%= name %>";
     <% if mode == 'slave' -%>
-      masters { master-servers; };
+      masters { <%= masters %>; };
       allow-transfer { transfer-servers; };
     <% end -%>
 };
