added allow-update to zone declaration

--- a/templates/named.conf.local_zone_fragment.erb
+++ b/templates/named.conf.local_zone_fragment.erb
@@ -4,7 +4,11 @@
 zone "<%= name %>" IN {
     type <%= mode %>;
     file "/var/lib/bind/db.<%= name %>";
-    <% if mode == 'slave' -%>
-      masters { <%= masters %>; };
-    <% end -%>
+  <% if mode == 'slave' -%>
+    masters { <%= masters %>; };
+  <% end -%>
+  <%- if @allow_update -%>
+    allow-update { <%= allow_update %>; };
+  <%- end %>
 };
+
