Fixed zone dir move to /var/lib/bind.

--- a/templates/named.conf.local_zone_fragment.erb
+++ b/templates/named.conf.local_zone_fragment.erb
@@ -8,7 +8,7 @@ zone "<%= name %>" IN {
 <%- else -%>
 zone "<%= name %>" IN {
     type <%= mode %>;
-    file "/var/lib/bind/db.<%= name %>";
+    file "<%= scope.lookupvar('bind::zone_dir') %>/db.<%= name %>";
   <% if mode == 'slave' -%>
     masters { <%= masters %>; };
   <% end -%>
