PERF-1350: Puppet 3.2.x - Resolved variable access deprecation, using @ qualifier.

--- a/templates/named.conf.local_acl_transfer_servers_fragment.erb
+++ b/templates/named.conf.local_acl_transfer_servers_fragment.erb
@@ -1,11 +1,11 @@
 
 <% if @transfer_servers %>
 acl "transfer-servers" {
-  <%transfer_servers.each do |server| %><%= server %>;<% end %>
+  <% @transfer_servers.each do |server| %><%= server %>;<% end %>
 };
 
 masters "master-servers" {
-  <%transfer_servers.each do |server| %><%= server %>;<% end %>
+  <% @transfer_servers.each do |server| %><%= server %>;<% end %>
 };
 <% end -%>
 
