--- a/templates/named.conf.local_masters_fragment.erb
+++ b/templates/named.conf.local_masters_fragment.erb
@@ -1,5 +1,5 @@
 
-masters "<%= name %>" {
-  <%addresses.each do |address| %><%= address %>;<% end %>
+masters "<%= @name %>" {
+  <% @addresses.each do |address| %><%= address %>;<% end %>
 };
 
