--- a/templates/named.conf.local_key_fragment.erb
+++ b/templates/named.conf.local_key_fragment.erb
@@ -1,6 +1,6 @@
 
-key "<%= name %>" {
-  algorithm <%= algorithm %>;
-  secret "<%= secret %>";
+key "<%= @name %>" {
+  algorithm <%= @algorithm %>;
+  secret "<%= @secret %>";
 };
 
